deployment/cmservice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmservice-service
  namespace: <YOUR-NAMESPACE>
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: cmservice
  type: ClusterIP
